# acf

./: .gitignore  LICENSE  MANIFESTO.md  README.md  SHOW_HN.md  SHOW_HN_PLAIN.txt  config.toml  context_libraries.cfg  pyproject.toml  safety_patterns.toml  tailwind_patterns.toml
agents/: __init__.py  api_contract_agent.py  base.py  code_review_agent.py  complexity_estimator_agent.py  consistency_checker_agent.py  context_agent.py  coverage_agent.py  decomposition_agent.py  dependency_audit_agent.py  design_agent.py  doc_agent.py  doc_requirements_agent.py  docker_agent.py  fix_agent.py  github_actions_agent.py  implementation_agent.py  invariant_enforcer.py  observability_agent.py  policy_agent.py  pr_packaging_agent.py  rag_budget_agent.py  rollback_strategy_agent.py  runtime_decision_agent.py  safety_patterns_agent.py  scaffold_agent.py  secrets_scan_agent.py  spec_agent.py  tailwind_css_agent.py  test_agent.py  test_generator_agent.py  verify_agent.py
agents/prompts/: __init__.py  code_principles.py
cli/: README.md  pyproject.toml
cli/agentcodefactory/: __init__.py  cli.py  output.py
cli/commands/: __init__.py  auth.py  extensions.py  marketplace.py  skills.py
docs/: LM_STUDIO_SETUP.md  MARKETPLACE_GUIDE.md  OLLAMA_SETUP.md
docs/marketplace/: browse.md  examples.md  getting-started.md  index.md  publishing.md  specification.md
docs/marketplace/creating/: agents.md  index.md  profiles.md  rag.md  skills.md
examples/: README.md
examples/extensions/hello-checker/: README.md  agent.py  manifest.yaml
examples/extensions/test-rag/: manifest.yaml  retriever.py
extensions/: __init__.py  installer.py  loader.py  manifest.py
integrations/: __init__.py  base.py  github_issues.py  jira.py  resolver.py
llm_backend/: __init__.py  anthropic_backend.py  base.py  ollama_backend.py  openai_backend.py
local_storage/: __init__.py  git_versioner.py
marketplace/official_extensions/rag/fastapi-patterns/: README.md  manifest.yaml  requirements.txt  retriever.py
marketplace/official_extensions/rag/fastapi-patterns/patterns/authentication/: api-key-auth.py  jwt-basic.py  jwt-refresh.py
marketplace/official_extensions/rag/fastapi-patterns/patterns/caching/: redis-cache.py
memory/: __init__.py  bm25.py  customer_memory.py  indexer.py  patterns.py  retriever.py  store.py
official_extensions/: README.md
official_extensions/add-docstrings/: manifest.yaml  skill.py
official_extensions/api-contract/: agent.py  manifest.yaml
official_extensions/code-review/: agent.py  manifest.yaml
official_extensions/decomposition/: agent.py  manifest.yaml
orchestrator/: __init__.py  checkpoints.py  runner.py  state_machine.py
pipeline/: __init__.py  cli.py  config.py
plugins/: __init__.py  loader.py  manifest.py  registry.py
profiles/: __init__.py  base.py  cli.py  django.py  fastapi.py  manager.py  node.py  react.py  rust.py  validate.py
rag/: README.md  __init__.py  budget_retriever.py  chunker.py  model_limits.py  retriever.py  store.py  token_counter.py
rag/compliance/: cookies.md  index.md
routing/: __init__.py  router.py
scaffolding/: __init__.py  generator.py  marketplace.py  templates.py
schemas/: __init__.py  api_contract.py  code_review_report.py  config_layout.py  context_report.py  coverage_report.py  dependency_audit_report.py  design_proposal.py  doc_report.py  feature_spec.py  implementation.py  memory.py  observability_config.py  pipeline_state.py  policy.py  pr_package.py  requirements.py  rollback_strategy.py  secrets_report.py  test_report.py  verification.py  workplan.py
skills/: __init__.py  base.py  chain_runner.py  runner.py
tools/: __init__.py  api_probe.py  base.py  dependency_resolver.py  deploy.py  filesystem_tool.py  git_manager.py  git_tool.py  health_check.py  http_tool.py  rag_fetcher.py  rollback.py  security.py  shell_tool.py  validator.py
(+11 files in other folders)
